# things-mcp

./: README.md  pyproject.toml
src/things_mcp/: __init__.py  __main__.py  handlers.py  things_server.py
